Updated html contents

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ html {
     scroll-behavior: smooth;
 }
 
-/* Styling for the entire site */
+/* Styling for the whole site */
 ul {
     list-style: none;
 }
